# scjn-jurisprudencia

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.claude/: settings.local.json
cli/: scjn_cli.py
docs/: COMPARACION_VS_SJF.md  CONTEXTO_PROYECTO.md  FAQ_VENTA.md  INSTALACION.md  MODELOS_DE_USO.md  USO_ABOGADO.md
install/: claude_desktop_config.json  instalar.bat  instalar_exe.bat  scjn_cli.spec  scjn_mcp_server.spec  setup_fts.py
scjn_core/: __init__.py  config.py  database.py  errores.py  filters.py  format.py  fts.py  protocol.py  ranking.py  search.py  tools_v12.py
scripts/: actualizar_scjn.bat  actualizar_scjn.sh  baseline_v1_1.py  validar_bd.py
scripts/archived/: eliminar_json_completo.py
server/: server.py
tests/: conftest.py  test_filters.py  test_ranking.py  test_search.py  test_tools_v12.py
updater/: actualizar_bd.py
